--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,17 @@
 .app-wrapper {
-  margin: 0 auto;
-  display: grid;
-  width: inherit;
-  height: inherit;
-  grid-template-areas:
+    margin: 0 auto;
+    display: grid;
+    width: inherit;
+    height: inherit;
+    grid-template-areas:
   "h h"
   "n c"
   "f f";
-  grid-template-rows: 100px auto 100px;
-  grid-template-columns: 2fr 10fr;
-  grid-gap: 2px;
+    grid-template-rows: 100px auto 100px;
+    grid-template-columns: 2fr 10fr;
+    grid-gap: 2px;
+}
+
+.app-wrapper-content {
+  background-color: cyan;
 }
