#lesson 20, 21, 22, 23, 24, 25, 26 dialogs, profile, navbar, map data

--- a/src/App.css
+++ b/src/App.css
@@ -15,3 +15,14 @@
 .app-wrapper-content {
   background-color: cyan;
 }
+
+a:any-link{
+    color: blueviolet;
+    text-decoration: none;
+}
+
+a.active{
+    color: brown;
+    cursor: pointer;
+    text-decoration: none;
+}
